<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:androd="http://schemas.android.com/apk/res-auto"
    android:background="@color/Theme_grey"
    tools:context="com.example.abhishek.myapplication.SignupCon"
    android:scrollbars="vertical">

    <RadioGroup
        android:id="@+id/gender_radio_button"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Theme_grey"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#FFFFFFFF"
            android:textSize="25sp" />

        <RadioButton
            android:text="@string/male"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:textColorHighlight="@color/buttonColor"
            android:textColorHint="@color/buttonColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
       <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:text="@string/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>
    </RadioGroup>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/gender_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >
    <TextView
        android:id="@+id/birth"
        android:text="@string/date_of_birth"
        android:background="@color/Theme_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="55dp"
        android:textColor="@color/TextColor"
        />
    <DatePicker
         android:id="@+id/dop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/Theme_grey"
         android:calendarViewShown="false"
         android:layout_marginLeft="2dp"
         android:layout_marginTop="0dp"
         android:layout_gravity="center"
         android:scaleX=".7"
         android:scaleY=".6"
         androd:paddingEnd="-40dp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="0dp"
         android:paddingBottom="0dp"
         >
         </DatePicker>
        <Button
            android:id="@+id/create_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/colorAccenta"
            android:textColor="@color/TextColor"
            android:padding="8dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="66dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="58dp"

            />

    </LinearLayout>
</RelativeLayout>
